# PowerClaw

./: .gitignore  POWERCLAW_ARCHITECTURE.md  POWERCLAW_ROADMAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/ec2/: powerclaw-backup.service  powerclaw-backup.timer  powerclaw.env.example  powerclaw.nginx.conf  powerclaw.service
docs/deploy/: ec2.md
docs/gateway/: telegram.md
docs/marketing/: ad-copy.md
powerclaw/: __init__.py  cli.py  dashboard.py  observability.py  permissions.py  server.py
powerclaw/config/: __init__.py  settings.py
powerclaw/gateway/: __init__.py  base.py  telegram.py
powerclaw/memory/: __init__.py  manager.py  sqlite.py
powerclaw/models/: __init__.py  fake.py  openai_compatible.py  router.py
powerclaw/reflection/: __init__.py  engine.py
powerclaw/runtime/: __init__.py  agent.py  state.py  store.py
powerclaw/skills/: __init__.py  engine.py
powerclaw/tools/: __init__.py  files.py  registry.py  skills.py  terminal.py
powerclaw/workflows/: __init__.py  repo_operator.py
scripts/: backup-state.sh  harden-ec2.sh  install-ec2.sh  package-ec2.sh
tests/: test_powerclaw_cli.py  test_powerclaw_file_tools.py  test_powerclaw_gateway_core.py  test_powerclaw_openai_provider.py  test_powerclaw_runtime.py  test_powerclaw_server.py  test_powerclaw_sqlite_memory.py  test_powerclaw_telegram_gateway.py  test_powerclaw_terminal_tool.py  test_powerclaw_upgrades.py
